--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 <p><ul style="font-size:20px;color:#1c73ff;">
 <li><b>About HTML:</b> In this web page we see that what is html, how html is used to create web pages and some html tags.</li>
 <li><b>Location:</b> Provide the location of MNIT Campus Jaipur where IIIT Kota is currently located,using movable google map.</li>
-<li><b>Qualification:</b> This webpage briefs about the achievements and qualifications of the designer of the website Adarsh Gupta.</li>
+<li><b>Qualification:</b> This webpage briefs about the achievements and qualifications of the designer of the website Yash Gupta.</li>
 <li><b>Subjects:</b> This webpage tells the subjects in IIIT Kota in first year which there respective subject codes.</li>
 </ul></p>
 <p><h2 style=color:#0F52BA;font-family:Cursive;><strong><br><br>About Me</strong></h2></p>
